# sozograph

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/sozograph/: __init__.py  core.py  extractor.py  ingest.py  interaction.py  prompts.py  render.py  resolver.py  schema.py  utils.py
src/sozograph/adapters/: __init__.py  firestore.py  rtdb.py  supabase.py
src/tests/: test_ingest.py  test_render.py
tests/: test_resolver.py
tests/fixtures/: sample_rtdb_node.json  sample_supabase_row.json  sample_transcripts.txt
