[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sozograph"
version = "0.1.0"
description = "SozoGraph v1: transcript/db object -> portable cognitive passport JSON"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Quantilytix" }
]
keywords = ["memory", "agents", "gemini", "context", "passport", "knowledge"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "google-genai>=0.6.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/quantilytix/sozograph"
Repository = "https://github.com/quantilytix/sozograph"
Issues = "https://github.com/quantilytix/sozograph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sozograph"]

[tool.hatch.build.targets.sdist]
include = [
  "src/sozograph/**",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
